--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -25,6 +25,6 @@
       mode: u=rw,g=r,o=r
    
   - name : run container
-    command : kubectl apply -f /home/ubuntu/medicurelb.yml
+    command : minikube kubectl apply -f /home/ubuntu/medicurelb.yml
     become : yes
     become_user : ubuntu
