--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -23,6 +23,11 @@
       owner: ubuntu
       group: ubuntu
       mode: u=rw,g=r,o=r
+
+  - name : delete already running pods in minikube
+    command : minikube kubectl delete -- -f /home/ubuntu/medicurelb.yml
+    become : yes
+    become_user : ubuntu
    
   - name : run container
     command : minikube kubectl create -- -f /home/ubuntu/medicurelb.yml
