--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -29,7 +29,7 @@
     become : yes
     become_user : ubuntu
    
-  - name : run container
+  - name : Creating pods in minikube
     command : minikube kubectl create -- -f /home/ubuntu/medicurelb.yml
     become : yes
     become_user : ubuntu
