--- a/medicurelb.yml
+++ b/medicurelb.yml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sbapp
+  name: medicure-app-deployment
 spec:
   selector:
     matchLabels:
-      app: sbapp
+      app: medicure-app
   replicas: 3
   template:
     metadata:
       labels:
-        app: sbapp
+        app: medicure-app
     spec:
       containers:
-      - name: sbapp
+      - name: medicure-app
         image: rahul9711/medicure:1.0
         imagePullPolicy: Always
         ports:
-        - name: sbapp
+        - name: medicure-app
           containerPort: 8082
           protocol: TCP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: sbapp-lb
+  name: medicure-app-service
   labels:
-    app: sbapp
+    app: medicure-app
   annotations:
     service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
     service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
@@ -36,4 +36,4 @@ spec:
   ports:
   - port: 8082
   selector:
-    app: sbapp
+    app: medicure-app
