--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -15,6 +15,6 @@
       mode: u=rw,g=r,o=r
    
   - name : Creating pods in kubernetes
-    command : kubectl create -- -f /home/ubuntu/medicurelb.yml
+    command : kubectl create -f /home/ubuntu/medicurelb.yml
     become : yes
     become_user : ubuntu
