--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -6,6 +6,9 @@
   - name: updating apt
     command : sudo apt-get update
 
+  - name: Remove Existing  Container
+    command: docker rm medicure
+
   - name: Copy file with owner and permission, using symbolic representation
     ansible.builtin.copy:
       src: ./medicurelb.yml
