--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,34 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependencies>
+	  
+                <dependency>
+                        <groupId>org.testng</groupId>
+                        <artifactId>testng</artifactId>
+                        <version>7.8.0</version>
+                        <scope>compile</scope>
+                </dependency>
+	  
+                <dependency>
+                        <groupId>org.seleniumhq.selenium</groupId>
+                        <artifactId>selenium-java</artifactId>
+                        <version>4.11.0</version>
+                        </dependency>
+		
+		<dependency>
+		        <groupId>io.github.bonigarcia</groupId>
+                        <artifactId>webdrivermanager</artifactId>
+                        <version>5.4.1</version>
+                        <scope>compile</scope>
+                </dependency>
+   	  
+</dependencies>
+  <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+		
 
 	<build>
 		<plugins>
