--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,11 @@
                 </dependency>
    	  
 </dependencies>
-  <properties>
+	
+<!--  <properties>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+  </properties>   -->
 		
 
 	<build>
