--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Industry ready project on based on Health Care Domain</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	
 	<dependencies>
