--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -14,8 +14,8 @@
       group: ubuntu
       mode: u=rw,g=r,o=r
 
-  #- name: Remove Previous deployment in Kubernetes
-    #command: sudo kubectl delete -f /home/ubuntu/medicurelb.yml
+  - name: Remove Previous deployment in Kubernetes
+    command: sudo kubectl delete -f /home/ubuntu/medicurelb.yml
    
   - name : Creating pods in kubernetes
     command : sudo kubectl create -f /home/ubuntu/medicurelb.yml
